Changed text in output ui

--- a/meteor/client/components/output/result/result.html
+++ b/meteor/client/components/output/result/result.html
@@ -74,8 +74,8 @@
                     {{#if not certificateWritten}}
                         {{#if valid}}
                             <p>
-                                <a href="#" class="item-link list-button signCertificate" data-id="{{id}}">Urkunde
-                                    wurde erstellt</a>
+                                <a href="#" class="item-link list-button signCertificate" data-id="{{id}}">Als erstellt
+                                    markieren</a>
                             </p>
                         {{/if}}
                     {{else}}
