--- a/meteor/client/components/input/attempts/attempts.html
+++ b/meteor/client/components/input/attempts/attempts.html
@@ -1,9 +1,9 @@
 <template name="attempts">
     {{#with sportType}}
-        <div class="autoWidthListBlock">
-            <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">
-                <a href="#" data-popup=".popup-{{old_object_name}}" class="link-open-st-info open-popup">
-                    {{#with metadata}}{{name}}{{/with}} <i class="f7-icons" style="font-size: 12px">info</i>
+        <div class="autoWidthListBlock link-open-st-info open-popup" data-popup=".popup-{{old_object_name}}">
+            <div class="content-block-title" style="padding-top: 8px" data-swiper-parallax="-100" data-swiper-parallax-duration="500">
+                <a href="#" class="link-open-st-info">
+                    {{#with metadata}}{{name}}{{/with}} <i class="f7-icons" style="font-size: 16px; line-height: 16px">info</i>
                 </a>
             </div>
             <div class="list-block {{#if
