increased Hitbox-Size for Info Buttons fixed

--- a/meteor/client/components/input/attempts/attempts.html
+++ b/meteor/client/components/input/attempts/attempts.html
@@ -1,7 +1,7 @@
 <template name="attempts">
     {{#with sportType}}
-        <div class="autoWidthListBlock link-open-st-info open-popup" data-popup=".popup-{{old_object_name}}">
-            <div class="content-block-title" style="padding-top: 8px" data-swiper-parallax="-100" data-swiper-parallax-duration="500">
+        <div class="autoWidthListBlock ">
+            <div class="content-block-title link-open-st-info open-popup" data-popup=".popup-{{old_object_name}}" style="padding: 8px; height: 16px" data-swiper-parallax="-100" data-swiper-parallax-duration="500">
                 <a href="#" class="link-open-st-info">
                     {{#with metadata}}{{name}}{{/with}} <i class="f7-icons" style="font-size: 16px; line-height: 16px">info</i>
                 </a>
