limited number of attempts (fixes #186)

--- a/meteor/client/components/input/attempts/attempts.html
+++ b/meteor/client/components/input/attempts/attempts.html
@@ -12,7 +12,7 @@
                     {{#each m in measurements}}
                         {{>attempt n=@index measurement=m metadata=metadata showIcon=true}}
                     {{/each}}
-                    {{#if scoreWritePermission metadata}}
+                    {{#if canAddAttempt metadata measurements}}
                         {{>attempt n=(length measurements) measurement=(empty_measurement metadata) metadata=metadata showIcon=false}}
                     {{/if}}
                 </ul>
