--- a/meteor/client/components/config/config.html
+++ b/meteor/client/components/config/config.html
@@ -43,7 +43,10 @@
                             {{forwardButton}}
                         </a>
                         {{#if printButtonShown}}
-                            <a href="#" class="print-button t-left fade fade-in">
+                            <a href="#" class="print-button-txt t-left fade fade-in">
+                                <i class="f7-icons">document_text</i>
+                            </a>
+                            <a href="#" class="print-button-html t-left fade fade-in">
                                 <i class="f7-icons">document_text_fill</i>
                             </a>
                             <a href="#" class="download-button t-left fade fade-in">
